--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,19 @@
     <properties>
         <java.version>11</java.version>
         <mapstruct.version>1.5.1.Final</mapstruct.version>
+        <twitter4j.version>4.0.7</twitter4j.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.twitter4j</groupId>
+                <artifactId>twitter4j-stream</artifactId>
+                <version>${twitter4j.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
