--- a/twitter-to-kafka-service/src/main/resources/application.yml
+++ b/twitter-to-kafka-service/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 twitter-to-kafka-service:
+  welcome-message: Welcome to twitter-to-kafka-service
   twitter-keywords:
     - Java
     - Microservices
