--- a/twitter-to-kafka-service-v2/src/main/resources/application.yml
+++ b/twitter-to-kafka-service-v2/src/main/resources/application.yml
@@ -6,7 +6,7 @@ twitter-to-kafka-service:
     - Spring
     - Kafka
     - Elasticsearch
-
+  twitter-v2-bearer-token: ${TWITTER_BEARER_TOKEN}
 
 
 
