12. Adding common config module (#1)

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>twitter-to-kafka-service</module>
         <module>twitter-to-kafka-service-v2</module>
+        <module>app-config-data</module>
     </modules>
 
     <dependencyManagement>
