--- a/twitter-to-kafka-service/pom.xml
+++ b/twitter-to-kafka-service/pom.xml
@@ -22,6 +22,11 @@
 <!--            <artifactId>kafka-streams</artifactId>-->
 <!--        </dependency>-->
         <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>app-config-data</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
