--- a/twitter-to-kafka-service/src/main/resources/application.yml
+++ b/twitter-to-kafka-service/src/main/resources/application.yml
@@ -20,5 +20,15 @@ retry-config:
   max-attempts: 3
   sleep-time-ms: 2000
 
+kafka-config:
+  bootstrap-servers: localhost:19092,localhost:29092,localhost:39092
+  schema-registry-url:
+    key: schema.registry.url
+    value: http://localhost:8081
+  topic-name: twitter-topic
+  topic-names-to-create:
+    - twitter-topic
+  number-of-partitions: 3
+  replication-factor: 3
 
 
