--- a/twitter-to-kafka-service/src/main/resources/application.yml
+++ b/twitter-to-kafka-service/src/main/resources/application.yml
@@ -22,9 +22,9 @@ retry-config:
 
 kafka-config:
   bootstrap-servers: localhost:19092,localhost:29092,localhost:39092
-  schema-registry-url:
+  schema-registry:
     key: schema.registry.url
-    value: http://localhost:8081
+    url: http://localhost:8081
   topic-name: twitter-topic
   topic-names-to-create:
     - twitter-topic
