--- a/twitter-to-kafka-service/pom.xml
+++ b/twitter-to-kafka-service/pom.xml
@@ -17,10 +17,14 @@
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-stream</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.kafka</groupId>-->
-<!--            <artifactId>kafka-streams</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>kafka-admin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>kafka-producer</artifactId>
+        </dependency>
         <dependency>
             <groupId>net.shyshkin.study.microservices</groupId>
             <artifactId>app-config-data</artifactId>
