--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -4,4 +4,4 @@ KAFKA_VERSION=5.0.4
 ELASTIC_VERSION=7.9.1
 SERVICE_VERSION=0.0.1-SNAPSHOT
 GLOBAL_NETWORK=application
-GROUP_ID=net.shyshkin.study.microservices
+GROUP_ID=artarkatesoft
