--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mapstruct.version>1.5.1.Final</mapstruct.version>
         <twitter4j.version>4.0.7</twitter4j.version>
         <spring.boot.version>2.7.0</spring.boot.version>
+        <spring-cloud.version>2021.0.3</spring-cloud.version>
         <twitter-api-java-sdk.version>1.2.4</twitter-api-java-sdk.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -34,10 +35,18 @@
         <module>twitter-to-kafka-service-v2</module>
         <module>app-config-data</module>
         <module>kafka</module>
+        <module>config-server</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>net.shyshkin.study.microservices</groupId>
                 <artifactId>app-config-data</artifactId>
