--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
+
   twitter-to-kafka-service:
-    image: ${GROUP_ID}/twitter-to-kafka-service:${SERVICE_VERSION:-latest}
+    image: ${GROUP_ID}/art-gelenler-twitter-to-kafka-service:${SERVICE_VERSION:-latest}
     ports:
       - "5005:5005"
     volumes:
@@ -14,5 +15,20 @@ services:
       - "KAFKA-CONFIG_BOOTSTRAP-SERVERS=kafka-broker-1:9092, kafka-broker-2:9092, kafka-broker-3:9092"
       - "KAFKA-CONFIG_SCHEMA-REGISTRY_URL=http://schema-registry:8081"
       - "TWITTER-TO-KAFKA-SERVICE_MOCK_ENABLE=true"
+      - "ENCRYPT_KEY=${ENCRYPT_KEY}"
     networks:
       - ${GLOBAL_NETWORK:-services}
+
+  config-server:
+    image: ${GROUP_ID}/art-gelenler-config-server:${SERVICE_VERSION:-latest}
+    ports:
+      - "5006:5006"
+    volumes:
+      - "./docker-logs:/workspace/config-server/logs"
+    environment:
+      - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006 -Xms128m -Xmx256m"
+      - "ENCRYPT_KEY=${ENCRYPT_KEY}"
+    networks:
+      - ${GLOBAL_NETWORK:-services}
+
+
