--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <avro.version>1.11.0</avro.version>
         <kafka-avro-serializer.version>7.1.1</kafka-avro-serializer.version>
         <docker.image.prefix>artarkatesoft</docker.image.prefix>
-        <docker.image.name>${project.artifactId}</docker.image.name>
+        <docker.image.name>art-gelenler-${project.artifactId}</docker.image.name>
     </properties>
 
     <modules>
