--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -4,11 +4,16 @@ services:
   twitter-to-kafka-service:
     image: ${GROUP_ID}/art-gelenler-twitter-to-kafka-service:${SERVICE_VERSION:-latest}
     ports:
-      - "5005:5005"
+      - "8091:8091"
     volumes:
       - "./docker-logs:/workspace/twitter-to-kafka-service/logs"
+      - "./check-config-server-started.sh:/usr/local/bin/check-config-server-started.sh"
+    user: root
+    entrypoint: ["check-config-server-started.sh"]
+    depends_on:
+      - config-server
     environment:
-      - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Xms128m -Xmx256m"
+      - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n -Xms128m -Xmx256m"
       - "LOGGING_LEVEL_NET_SHYSHKIN_STUDY=debug"
       - "LOGGING_LEVEL_ROOT=info"
       - "KAFKA-CONFIG_TOPIC-NAME=twitter-topic"
@@ -16,6 +21,7 @@ services:
       - "KAFKA-CONFIG_SCHEMA-REGISTRY_URL=http://schema-registry:8081"
       - "TWITTER-TO-KAFKA-SERVICE_MOCK_ENABLE=true"
       - "ENCRYPT_KEY=${ENCRYPT_KEY}"
+      - "SPRING_CLOUD_CONFIG_URI=http://config-server:8080"
     networks:
       - ${GLOBAL_NETWORK:-services}
 
