--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -27,11 +27,9 @@ services:
     image: ${GROUP_ID}/art-gelenler-config-server:${SERVICE_VERSION:-latest}
     ports:
       - "8080:8080"
+    restart: always
     volumes:
       - "./docker-logs/config-server:/workspace/config-server/logs"
-      - "./config-server-install-curl-and-jk.sh:/usr/local/bin/config-server-install-curl-and-jk.sh"
-    user: root
-    entrypoint: [ "config-server-install-curl-and-jk.sh" ]
     healthcheck:
       test: curl -m 5 --silent --fail --request GET http://localhost:8080/actuator/health | jq --exit-status -n 'inputs | if has("status") then .status=="UP" else false end' > /dev/null || exit 1
       interval: 10s
