#3 Refactor KafkaProducerConfigData to use Proper Types instead of Strings

--- a/app-config-data/pom.xml
+++ b/app-config-data/pom.xml
@@ -15,4 +15,11 @@
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
