--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -16,6 +16,7 @@
         <module>kafka-admin</module>
         <module>kafka-model</module>
         <module>kafka-producer</module>
+        <module>kafka-consumer</module>
     </modules>
 
 </project>
