--- a/config-server-repository/config-client-kafka_to_elastic.yml
+++ b/config-server-repository/config-client-kafka_to_elastic.yml
@@ -24,7 +24,7 @@ kafka-consumer-config:
   specific-avro-reader-key: specific.avro.reader
   specific-avro-reader: true
   batch-listener: true
-  auto-startup: false
+  auto-startup: true
   concurrency-level: 3
   session-timeout-ms: 10000
   heartbeat-interval-ms: 3000
