37. Creating elastic-model module (#9)

--- a/config-server-repository/config-client-kafka_to_elastic.yml
+++ b/config-server-repository/config-client-kafka_to_elastic.yml
@@ -34,4 +34,8 @@ kafka-consumer-config:
   max-partition-fetch-bytes-boost-factor: 1
   poll-timeout-ms: 150
 
-
+elastic-config:
+  index-name: twitter-index
+  connection-url: http://localhost:9200
+  connection-timeout-ms: 5000
+  socket-timeout-ms: 30000
