--- a/elastic/elastic-model/pom.xml
+++ b/elastic/elastic-model/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>elastic-model</artifactId>
 
+    <properties>
+        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
