39. Creating elastic-index-client module (#9)

--- a/elastic/pom.xml
+++ b/elastic/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>elastic-model</module>
         <module>elastic-config</module>
+        <module>elastic-index-client</module>
     </modules>
 
 </project>
