--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>net.shyshkin.study.microservices</groupId>
+                <artifactId>elastic-model</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.twitter4j</groupId>
                 <artifactId>twitter4j-stream</artifactId>
                 <version>${twitter4j.version}</version>
