--- a/config-server-repository/config-client-kafka_to_elastic.yml
+++ b/config-server-repository/config-client-kafka_to_elastic.yml
@@ -39,3 +39,4 @@ elastic-config:
   connection-url: http://localhost:9200
   connection-timeout-ms: 5000
   socket-timeout-ms: 30000
+  use-repository: true
