--- a/kafka-to-elastic-service/pom.xml
+++ b/kafka-to-elastic-service/pom.xml
@@ -11,58 +11,88 @@
 
     <artifactId>kafka-to-elastic-service</artifactId>
 
-<dependencies>
-    <dependency>
-        <groupId>org.springframework.kafka</groupId>
-        <artifactId>spring-kafka</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>net.shyshkin.study.microservices</groupId>
-        <artifactId>app-config-data</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>net.shyshkin.study.microservices</groupId>
-        <artifactId>kafka-consumer</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>net.shyshkin.study.microservices</groupId>
-        <artifactId>kafka-admin</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>net.shyshkin.study.microservices</groupId>
-        <artifactId>kafka-model</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>io.confluent</groupId>
-        <artifactId>kafka-avro-serializer</artifactId>
-    </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>app-config-data</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>kafka-consumer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>kafka-admin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>kafka-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+        </dependency>
 
-    <dependency>
-        <groupId>net.shyshkin.study.microservices</groupId>
-        <artifactId>elastic-config</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>net.shyshkin.study.microservices</groupId>
-        <artifactId>elastic-model</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>net.shyshkin.study.microservices</groupId>
-        <artifactId>elastic-index-client</artifactId>
-    </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>elastic-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>elastic-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>elastic-index-client</artifactId>
+        </dependency>
 
-    <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-config</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-configuration-processor</artifactId>
-        <optional>true</optional>
-    </dependency>
-</dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                    <imageName>${docker.image.prefix}/${docker.image.name}:${project.version}</imageName>
+                    <pullPolicy>IF_NOT_PRESENT</pullPolicy>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>build-image</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
