--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -40,7 +40,7 @@ services:
       test: curl -m 5 --silent --fail --request GET http://localhost:8080/actuator/health | jq --exit-status -n 'inputs | if has("status") then .status=="UP" else false end' > /dev/null || exit 1
       interval: 10s
       timeout: 2s
-      retries: 10
+      retries: 20
       start_period: 20s
     environment:
       - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n -Xms128m -Xmx256m"
@@ -56,6 +56,9 @@ services:
       - "8092:8092"
     volumes:
       - "./docker-logs/kafka-to-elastic-service:/workspace/kafka-to-elastic-service/logs"
+      - "./check-kafka-topics-created.sh:/usr/local/bin/check-kafka-topics-created.sh"
+    user: root
+    entrypoint: [ "check-kafka-topics-created.sh" ]
     depends_on:
       config-server:
         condition: service_healthy
