--- a/docker-compose/elastic_cluster.yml
+++ b/docker-compose/elastic_cluster.yml
@@ -14,6 +14,11 @@ services:
       memlock:
         soft: -1
         hard: -1
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s" ]
+      interval: 20s
+      timeout: 10s
+      retries: 3
     volumes:
       - data01:/usr/share/elasticsearch/data
     ports:
@@ -33,6 +38,11 @@ services:
       memlock:
         soft: -1
         hard: -1
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s" ]
+      interval: 20s
+      timeout: 10s
+      retries: 3
     volumes:
       - data02:/usr/share/elasticsearch/data
     networks:
@@ -50,6 +60,11 @@ services:
       memlock:
         soft: -1
         hard: -1
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s" ]
+      interval: 20s
+      timeout: 10s
+      retries: 3
     volumes:
       - data03:/usr/share/elasticsearch/data
     networks:
