--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -44,6 +44,7 @@
                     </excludes>
                     <layers>
                         <enabled>true</enabled>
+                        <includeLayerTools>true</includeLayerTools>
                     </layers>
                 </configuration>
             </plugin>
