--- a/kafka-to-elastic-service/src/main/resources/application.yml
+++ b/kafka-to-elastic-service/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
   config:
     import: 'configserver:'
 
+management.health.elasticsearch.enabled: false
+
 #encrypt:
 #  key: ${ENCRYPT_KEY}
 
