--- a/elastic/pom.xml
+++ b/elastic/pom.xml
@@ -16,6 +16,7 @@
         <module>elastic-model</module>
         <module>elastic-config</module>
         <module>elastic-index-client</module>
+        <module>elastic-query-client</module>
     </modules>
 
 </project>
